--- a/.config/systemd/user/sleep.service
+++ b/.config/systemd/user/sleep.service
@@ -3,7 +3,9 @@ Description=Sleep Manager
 PartOf=graphical-session.target
 
 [Service]
-ExecStart=/usr/bin/xautolock -time 10 -locker "i3exit suspend" -detectsleep
+#ExecStart=/usr/bin/xautolock -time 10 -locker "i3exit suspend" -detectsleep
+ExecStart=/usr/bin/swayidle -w timeout 300 'swaylock -f -c 262626' timeout 600 'systemctl suspend' before-sleep 'swaylock -f -c 262626'
+Environment=WAYLAND_DISPLAY=wayland-1
 
 [Install]
 WantedBy=xsession.target
