replay-sorcery.conf

--- a/.config/replay-sorcery.conf
+++ b/.config/replay-sorcery.conf
@@ -2,7 +2,7 @@ logLevel = info
 traceLevel = error
 recordSeconds = 180
 videoInput = hwaccel
-videoDevice = auto
+videoDevice = card0:60
 videoFramerate = 60
 keyName = r
 keyMods = ctrl+super
