--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -473,91 +473,27 @@ adjust_line_height  100%
 
 #: Color scheme {{{
 
-foreground #f0fdff
-background #2a2e38
-
-#: The foreground and background colors
-
-background_opacity 0.8
-
-#: The opacity of the background. A number between 0 and 1, where 1 is
-#: opaque and 0 is fully transparent.  This will only work if
-#: supported by the OS (for instance, when using a compositor under
-#: X11). Note that it only sets the default background color's
-#: opacity. This is so that things like the status bar in vim,
-#: powerline prompts, etc. still look good.  But it means that if you
-#: use a color theme with a background color in your editor, it will
-#: not be rendered as transparent.  Instead you should change the
-#: default background color in your kitty config and not use a
-#: background color in the editor color scheme. Or use the escape
-#: codes to set the terminals default colors in a shell script to
-#: launch your editor.  Be aware that using a value less than 1.0 is a
-#: (possibly significant) performance hit.  If you want to dynamically
-#: change transparency of windows set dynamic_background_opacity to
-#: yes (this is off by default as it has a performance cost)
-
-# dynamic_background_opacity no
-
-#: Allow changing of the background_opacity dynamically, using either
-#: keyboard shortcuts (increase_background_opacity and
-#: decrease_background_opacity) or the remote control facility.
-
-# dim_opacity 0.75
-
-#: How much to dim text that has the DIM/FAINT attribute set. One
-#: means no dimming and zero means fully dimmed (i.e. invisible).
-
-# selection_foreground #000000
-
-#: The foreground for text selected with the mouse. A value of none
-#: means to leave the color unchanged.
-
-# selection_background #fffacd
-
-#: The background for text selected with the mouse.
-
-
-#: The 16 terminal colors. There are 8 basic colors, each color has a
-#: dull and bright version. You can also set the remaining colors from
-#: the 256 color table as color16 to color255.
-
-
-#: black
-color0 #2a2e38
-color8 #71798a
-
-#: red
-color1  #d08785
-color9 #ff3334
-
-#: green
-color2  #6f98b3
-color10 #9ec400
-
-#: yellow
-
-color3  #fdf8ce
-color11 #e7c547
-
-#: blue
-
-color4  #a6b8cc
-color12 #7aa6da
-
-#: magenta
-
-color5  #fcdbd9
-color13 #b77ee0
-
-#: cyan
-
-color6  #ffd17f
-color14 #54ced6
-
-#: white
-
-color7  #f0fdff
-color15 #ffffff
+background #2b2c2e
+foreground #d2d8d9
+cursor #708183
+selection_background #e3e8ed
+color0 #7c8a8f
+color8 #888888
+color1 #b23a51
+color9 #f24840
+color2 #789a69
+color10 #80c46f
+color3 #b9ab4a
+color11 #ffeb62
+color4 #2a7fac
+color12 #4095ff
+color5 #bc4f5a
+color13 #fb5175
+color6 #44a799
+color14 #52ccbd
+color7 #d2d8d9
+color15 #d2d8d9
+selection_foreground #2b2c2e
 
 #: }}}
 
