--- a/.i3/config
+++ b/.i3/config
@@ -120,6 +120,8 @@ bindsym $mod+v split toggle
 # toggle fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
+bindsym $mod+e exec ranger
+
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
