--- a/.config/sway/config
+++ b/.config/sway/config
@@ -4,9 +4,9 @@
 # Set mod key (Mod1=<Alt>, Mod4=<Super>)
 set $mod Mod1
 
-set $mainBg /home/beppe/Pictures/wallhaven-3z2yzv.png
+set $mainBg /home/beppe/Pictures/wallhaven-y8k5j7.png
 set $secondaryBg /home/beppe/Pictures/wallhaven-y8k5j7.png 
-set $lockBg /home/beppe/Pictures/wallhaven-y8w1zg.jpg
+#set $lockBg /home/beppe/Pictures/wallhaven-y8w1zg.jpg
 
 # set default desktop layout (default is tiling)
 # workspace_layout tabbed <stacking|tabbed>
@@ -80,7 +80,7 @@ bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
 bindsym $mod+Shift+h exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
 bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
 
-# focus_follows_mouse no
+focus_follows_mouse no
 
 # change focus
 #bindsym $mod+y focus left
@@ -361,9 +361,9 @@ exec_always --no-startup-id fix_xcursor
 
 # Start i3bar to display a workspace bar (plus the system information i3status if available)
 bar {
-    swaybar_command waybar
+    #swaybar_command waybar
 	#i3bar_command i3bar
-	#status_command i3status
+	status_command i3status
 	position bottom
 
 ## please set your primary output first. Example: 'xrandr --output eDP1 --primary'
