--- a/.i3/config
+++ b/.i3/config
@@ -39,7 +39,8 @@ bindsym $mod+q kill
 # start program launcher
 #bindsym $mod+d exec --no-startup-id dmenu_recency
 
-bindsym $mod+space exec --no-startup-id wofi --show run
+bindsym $mod+Space exec --no-startup-id rofi --show run
+bindsym $mod+p exec --no-startup-id rofi --show run
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
@@ -357,8 +358,8 @@ exec_always --no-startup-id fix_xcursor
 
 # Start i3bar to display a workspace bar (plus the system information i3status if available)
 bar {
-    swaybar_command waybar
-	#i3bar_command i3bar
+    #swaybar_command waybar
+	i3bar_command i3bar
 	#status_command i3status
 	position bottom
 
