--- a/.i3/config
+++ b/.i3/config
@@ -29,18 +29,15 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec kitty
 
-
-# Replay sorcery saves replays like shadowplay baybee
-bindsym $mod+Shift+s exec replay-sorcery save
-
 # kill focused window
 bindsym $mod+q kill
 
 # start program launcher
 #bindsym $mod+d exec --no-startup-id dmenu_recency
 
-bindsym $mod+Space exec --no-startup-id rofi --show run
-bindsym $mod+p exec --no-startup-id rofi --show run
+
+bindsym $mod+space exec dmenu_run
+bindsym $mod+p exec --no-startup-id rofi -show window
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
@@ -63,9 +60,9 @@ bindsym $mod+Ctrl+m exec pavucontrol
 
 # Start Applications
 bindsym $mod+Ctrl+b exec terminal -e 'bmenu'
-bindsym $mod+F2 exec palemoon
-bindsym $mod+F3 exec pcmanfm
-# bindsym $mod+F3 exec ranger
+bindsym $mod+F2 exec firefox
+#bindsym $mod+F3 exec pcmanfm
+bindsym $mod+F3 exec ranger
 bindsym $mod+Shift+F3 exec pcmanfm_pkexec
 bindsym $mod+F5 exec terminal -e 'mocp'
 bindsym $mod+t exec --no-startup-id pkill picom
@@ -314,7 +311,7 @@ exec --no-startup-id nitrogen --restore; sleep 1; picom -b
 #exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
-exec --no-startup-id pamac-tray
+#exec --no-startup-id pamac-tray
 exec --no-startup-id clipit
 exec --no-startup-id blueberry-tray
 # exec --no-startup-id blueman-applet
@@ -322,7 +319,7 @@ exec --no-startup-id blueberry-tray
 #exec --no-startup-id start_conky_maia
 # exec --no-startup-id start_conky_green
 #``exec --no-startup-id xautolock -time 10 -locker blurlock
-exec_always --no-startup-id ff-theme-util
+#exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 
 # Color palette used for the terminal ( ~/.Xresources file )
@@ -359,8 +356,8 @@ exec_always --no-startup-id fix_xcursor
 # Start i3bar to display a workspace bar (plus the system information i3status if available)
 bar {
     #swaybar_command waybar
-	i3bar_command i3bar
-	#status_command i3status
+	#i3bar_command i3bar
+	status_command i3status
 	position bottom
 
 ## please set your primary output first. Example: 'xrandr --output eDP1 --primary'
@@ -373,16 +370,23 @@ bar {
 	strip_workspace_numbers yes
 
     colors {
-        background #222D31
-        statusline #F9FAF9
-        separator  #454947
-
+        background #000000
+        statusline #FFFFFF
+        separator  #FFFFFF
+        
 #                      border  backgr. text
-        focused_workspace  #F9FAF9 #16a085 #292F34
-        active_workspace   #595B5B #353836 #FDF6E3
-        inactive_workspace #595B5B #222D31 #EEE8D5
+        focused_workspace  #FFFFFF #FFFFFF #000000
+        active_workspace   #FFFFFF #FFFFFF #000000
+        inactive_workspace #000000 #000000 #FFFFFF
         binding_mode       #16a085 #2C2C2C #F9FAF9
         urgent_workspace   #16a085 #FDF6E3 #E5201D
+ 
+
+#        focused_workspace  #F9FAF9 #16a085 #292F34
+#        active_workspace   #595B5B #353836 #FDF6E3
+#        inactive_workspace #595B5B #222D31 #EEE8D5
+#        binding_mode       #16a085 #2C2C2C #F9FAF9
+#        urgent_workspace   #16a085 #FDF6E3 #E5201D
     }
 }
 
