--- a/.config/systemd/user/sleep.service
+++ b/.config/systemd/user/sleep.service
@@ -3,8 +3,8 @@ Description=Sleep Manager
 PartOf=graphical-session.target
 
 [Service]
-#ExecStart=/usr/bin/xautolock -time 10 -locker "i3exit suspend" -detectsleep
-ExecStart=/usr/bin/swayidle -w timeout 300 'swaylock -f -i /home/beppe/Pictures/wallhaven-5w5pd8.png' timeout 600 'systemctl suspend' before-sleep 'swaylock -f -i /home/beppe/Pictures/wallhaven-5w5pd8.png'
+ExecStart=/usr/bin/xautolock -time 10 -locker "i3exit suspend" -detectsleep
+#ExecStart=/usr/bin/swayidle -w timeout 300 'swaylock -f -i /home/beppe/Pictures/wallhaven-5w5pd8.png' timeout 600 'systemctl suspend' before-sleep 'swaylock -f -i /home/beppe/Pictures/wallhaven-5w5pd8.png'
 Environment=WAYLAND_DISPLAY=wayland-1
 
 [Install]
