--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -263,7 +263,7 @@ adjust_line_height  100%
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+ enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
@@ -472,33 +472,57 @@ adjust_line_height  100%
 #: }}}
 
 #: Color scheme {{{
+# old colors
+#background #2b2c2e
+#foreground #d2d8d9
+#cursor #708183
+#selection_background #e3e8ed
+#color0 #7c8a8f
+#color8 #888888
+#color1 #b23a51
+#color9 #f24840
+#color2 #789a69
+#color10 #80c46f
+#color3 #b9ab4a
+#color11 #ffeb62
+#color4 #2a7fac
+#color12 #4095ff
+#color5 #bc4f5a
+#color13 #fb5175
+#color6 #44a799
+#color14 #52ccbd
+#color7 #d2d8d9
+#color15 #d2d8d9
+#selection_foreground #2b2c2e
+#
 
-background #2b2c2e
+background #3d3f41
 foreground #d2d8d9
 cursor #708183
-selection_background #e3e8ed
-color0 #7c8a8f
-color8 #888888
-color1 #b23a51
+selection_background #214283
+color0 #25292a
+color8 #25292a
+color1 #f24840
 color9 #f24840
-color2 #789a69
-color10 #80c46f
-color3 #b9ab4a
-color11 #ffeb62
-color4 #2a7fac
-color12 #4095ff
-color5 #bc4f5a
-color13 #fb5175
-color6 #44a799
-color14 #52ccbd
+color2 #629655
+color10 #629655
+color3 #b68800
+color11 #b68800
+color4 #2074c7
+color12 #2074c7
+color5 #797fd4
+color13 #797fd4
+color6 #15968d
+color14 #15968d
 color7 #d2d8d9
 color15 #d2d8d9
-selection_foreground #2b2c2e
+selection_foreground #3d3f41
+
 
 #: }}}
 
 #: Transparency {{{
-background_opacity 0.8
+background_opacity .6
 #: }}}
 
 #: Advanced {{{
